tests/vertical-slice/reject/await_task_deadline_deferred.hew
// Reject fixture (NEW-6b): `await <task> | after d` — a deadline on a task-await.
// The spec is silent on the task-await timeout error type, so this form is
// deferred to v0.6 and must fail CLOSED at COMPILE time (never a runtime
// NotYetImplemented, never a hang). `fork t = work();` itself now type-checks
// and binds `t : Task<()>`; it is the deadline clause on the task-await that
// the HIR await-deadline gate rejects.
//
// Harness verb: hew compile (must fail)
// Expected diagnostic substring: "task-await and suspending-closure deadlines are deferred"
fn work() {}

actor Driver {
    receive fn go() {
        scope {
            fork t = work();
            await t | after 50ms;
        }
    }
}

fn main() {
    let d = spawn Driver;
    d.go();
}
